# qa_ui_automation

./: .gitignore  Dockerfile  Jenkinsfile  conftest.py  docker-compose.yml  for_jenkins.py  index.html  pyproject.toml  requirements.txt  test_add.py
.github/workflows/: test_project.yml
data/: data.py
generator/: generator.py
locators/: alerts_frame_windows_locators.py  elements_page_locators.py  form_page_locators.py
pages/: alerts_page.py  base_page.py  elements_page.py  form_page.py  test_jenkins.py
reports/allure-results/: fea15fe9-f8ae-4f3c-872f-1c349fa99596-container.json
scripts/: install_allure.sh  install_docker.sh  install_selenium.sh
tests/: conftest.py  test_alerts.py  test_elements.py  test_form.py
