[tool.poetry]
name = "qa_automation_cource"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
selenium = "^4.3.0"
webdriver-manager = "^3.7.1"
Faker = "^13.14.0"
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 100

[tool.isort]
profile = "black"


